<resources>
  <string name="app_name">毛毛金服</string>
  <string name="input_phone">请输入手机号</string>
  <string name="input_psw">请输入密码</string>
  <string name="login">登  录</string>
  <string name="free_register">免费注册</string>
  <string name="input_code">输入验证码</string>
  <string name="sms_code">短信验证码</string>
  <string name="confirm_psw">确认密码</string>
  <string name="protocol">阅读并同意  《毛毛金服服务协议》</string>
  <string name="phone_not_empty">手机号不能为空</string>
  <string name="not_mobile_phone">手机号格式不正确</string>
  <string name="psw_not_empty">密码不能为空</string>
  <string name="psw_length_not_enough">密码长度不能小于6位</string>
  <string name="psw_not_same">密码不一致</string>
  <string name="read_and_agree_protocol">请阅读并同意毛毛金服协议</string>
  <string name="not_empty">不能为空</string>
  <string name="take_psw">找回密码</string>
  <string name="next_step">下一步</string>
  <string name="set_psw">请设置6-16位密码</string>
  <string name="confirm">确 认</string>
  <string name="code_has_send">验证码已发送</string>
  <string name="home">首页</string>
  <string name="loan">贷款</string>
  <string name="complaint">举报</string>
  <string name="store">店铺</string>
  <string name="complaint_cause_1">存在欺诈行为</string>
  <string name="complaint_cause_2">信贷经理乱收费</string>
  <string name="complaint_cause_3">服务态度恶劣</string>
  <string name="cancel">取消</string>
  <string name="apply_loan">我要贷款</string>
  <string name="name">姓名</string>
  <string name="input">请输入</string>
  <string name="loan_money">贷款金额(万元)</string>
  <string name="career">职业身份</string>
  <string name="select">请选择</string>
  <string name="fund">是否有本地公积金</string>
  <string name="social_security">是否有本地社保</string>
  <string name="house">名下房产类型</string>
  <string name="car">名下车产类型</string>
  <string name="credit">个人信用情况</string>
  <string name="age">年龄</string>
  <string name="commit">提 交</string>
  <string name="me_loan">我要贷款</string>
  <string name="locate_fail">定位失败</string>
  <string name="complete">完成</string>
  <string name="apply_current">立即申请</string>
  <string name="apply_information_success">申请资料提交成功</string>
  <string name="receive_customer_apply">已经收到您的贷款申请稍后将电话联系您</string>
  <string name="apply_success">提交成功</string>
  <string name="product_detail">产品详情</string>
  <string name="comprehensive_score">综合评分</string>
  <string name="all_evaluate">全部评价</string>
  <string name="all">全部</string>
  <string name="good_evaluate">好评</string>
  <string name="medium_evaluate">中评</string>
  <string name="negative_evaluate">差评</string>
  <string name="month_income">月收入(元)</string>
  <string name="month_income_way">工资发放形式</string>
  <string name="order_msg">订单消息</string>
  <string name="sys_msg">系统消息</string>
  <string name="news">资讯</string>
  <string name="news_detail">资讯详情</string>
  <string name="verify_name">实名认证</string>
  <string name="score">积分</string>
  <string name="my_order">我的订单</string>
  <string name="collect">收藏</string>
  <string name="recommend_prize">推荐有奖</string>
  <string name="become_manager">信贷经理入驻</string>
  <string name="bind_account">账号绑定</string>
  <string name="setting">设置</string>
  <string name="modify_psw">修改密码</string>
  <string name="login_again">重新登录</string>
  <string name="about_us">关于我们</string>
  <string name="feed_back">意见反馈</string>
  <string name="score_detail">积分明细</string>
  <string name="score_rule">积分规则</string>
  <string name="cancel_collect">取消收藏</string>
  <string name="card_number">身份证号</string>
  <string name="address">地址</string>
  <string name="real_name">真实名字</string>
  <string name="commit_audit">提交审核</string>
  <string name="evaluate">评 价</string>
  <string name="order_detail">订单详情</string>
  <string name="contact_service">联系客服</string>
  <string name="sure">确定</string>
  <string name="sina_weibo">新浪微博</string>
  <string name="friend_circle">朋友圈</string>
  <string name="weixin">微信</string>
  <string name="qq_space">QQ空间</string>
  <string name="copy_url">复制链接</string>
  <string name="share_success">分享成功</string>
  <string name="share_fail">分享失败</string>
  <string name="share_cacel">分享取消</string>
  <string name="bind_success">绑定成功</string>
  <string name="bind_fail">绑定失败</string>
  <string name="bind_cacel">取消绑定</string>
  <string name="rub_order">抢单</string>
  <string name="throw_order">甩单</string>
  <string name="wallet">钱包</string>
  <string name="small_name_card">微名片</string>
  <string name="calculator">房贷计算器</string>
  <string name="pay_current">立即购买</string>
  <string name="pay_confirm">确认支付</string>
  <string name="cus_detail">客户详情</string>
  <string name="i_want_money">我要提现</string>
  <string name="save_money_current">立即充值</string>
  <string name="pay_detail">账单明细详情</string>
  <string name="cus_contact_way">用户联系方式</string>
  <string name="send">发布</string>
  <string name="throw_fetch_money">甩单赚钱</string>
  <string name="throw_order_list">甩单记录</string>
  <string name="me">我的</string>
  <string name="throw_order_detail">甩单详情</string>
  <string name="belong_city">所在地址</string>
  <string name="company_name">机构名称</string>
  <string name="career_time">当前工龄(年)</string>
  <string name="cooperation_info">合作信息</string>
  <string name="avatar">头像</string>
  <string name="create_store">创建信贷经理店铺</string>
  <string name="cus_order">客户订单</string>
  <string name="delegate_pro">代理产品</string>
  <string name="delegated_pro">已代理产品</string>
  <string name="no_record">没有记录</string>
  <string name="share_card">分享名片</string>
  <string name="order_success">订单成功</string>
  <string name="fail">失败</string>
  <string name="is_single">婚姻状况</string>
  <string name="throw_order_success">甩单成功</string>
  <string name="commit_success">提交成功</string>
  <string name="fail_cause">失败原因</string>
  <string name="sign_money">签约金额</string>
  <string name="send_money">放款金额</string>
  <string name="input_sign_money">请输入签约金额</string>
  <string name="input_send_money">请输入放款金额</string>
  <string name="i_want_delegate">我要代理</string>
  <string name="sure_unbind_weixin">确定解绑微信？</string>
  <string name="cancel_delegate">取消代理</string>
  <string name="sure_cancel_delegate">确定取消代理该产品？</string>
  <string name="delegate_pro_detail">代理产品详情</string>
  <string name="delegated_pro_detail">已代理产品详情</string>
  <string name="belong_address">所在地址</string>
  <string name="company_type">机构类型</string>
  <string name="belong_department">所属部门</string>
  <string name="verify_again">重新认证</string>
  <string name="share_store">分享店铺</string>
  <string name="edit_store">编辑店铺</string>
  <string name="temp_ignore">暂时忽略</string>
  <string name="delegate_current">立即代理</string>
  <string name="share_store_get_2_score">分享成功，恭喜您获得2积分</string>
  <string name="save">保存</string>
  <string name="sure_cost">确定充值</string>
  <string name="score_cost">积分充值</string>
  <string name="cost_success">充值成功</string>
  <string name="cost_success_count">预计3-5天以内到账,5s后自动跳转至上一页面</string>
  <string name="cost_way">充值方式</string>
  <string name="want_all_money">全部提现</string>
  <string name="want_current">立即提现</string>
  <string name="want_money_success">提现成功</string>
  <string name="edit_name_card">编辑名片</string>
  <string name="share_name_card">分享名片</string>
  <string name="phone">手机号码</string>
  <string name="weixin_number">微信号</string>
  <string name="loan_info">贷款信息</string>
  <string name="loan_limit">贷款期限（月）</string>
  <string name="loan_type">贷款类型</string>
  <string name="basic_info">基本信息</string>
  <string name="work_info">工作信息</string>
  <string name="asset_info">资产信息</string>
  <string name="want_way">提现方式</string>
  <string name="logining">登录中...</string>
  <string name="code_over_date">验证码过期</string>
  <string name="params_error">参数错误</string>
  <string name="username_or_psw_error">账号或密码错误</string>
  <string name="empty">没有数据</string>
  <string name="verifying">实名认证审核中</string>
  <string name="verify_success">审核成功</string>
  <string name="verify_fail">审核失败</string>
  <string name="collect_success">收藏成功</string>
  <string name="cancel_collect_success">取消收藏成功</string>
  <string name="no_data">没有内容</string>
  <string name="no_msg">没有消息</string>
  <string name="finance">金融政策</string>
  <string name="loan_rate">贷款利率</string>
  <string name="teach_info">资料详解</string>
  <string name="msg">消息</string>
  <string name="no_filter_data">没有筛选结果</string>
  <string name="verify_no">你还未实名认证，请先认证</string>
  <string name="audit_fail">审核失败</string>
  <string name="auditing">审核中</string>
  <string name="throw_success">已成交</string>
  <string name="expired">已过期</string>
  <string name="throw_order_again">重新甩单</string>
  <string name="complaint_success">举报成功</string>
  <string name="throw_order_record">甩单记录</string>
  <string name="complaint_repetition">重复举报</string>
  <string name="input_legal_card">请输入有效的身份证号</string>
  <string name="bind_phone">绑定手机号</string>
  <string name="no_collect">还未收藏任何内容</string>
  <string name="has_bind">已绑定</string>
  <string name="no_bind">未绑定</string>
  <string name="unbind_success">解绑成功</string>
  <string name="unbind_fail">解绑失败</string>
  <string name="unbind_cancel">解绑取消</string>
  <string name="store_desc">店铺描述</string>
  <string name="code_error">验证码错误</string>

  <!--umeng-->

</resources>
