<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="170dp"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:background="@drawable/bg_white_layer">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/title_black_color"
        android:text="@string/sign_money"
        />
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_stroke_3_e6"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="15dp"
      >
    <EditText
        android:id="@+id/etSignMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:background="@null"
        android:hint="@string/input_sign_money"
        android:textSize="12sp"
        android:textColorHint="@color/text_3_b3_color"
        android:textColor="@color/title_black_color"
        />
    <TextView
        android:id="@+id/tvUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_3_4d_color"
        android:text="万元"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        />
  </FrameLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal"
      android:layout_marginTop="30dp"
      >
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:background="@color/bg_white_color"
        android:textColor="@color/title_black_color"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/btnCommit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/commit"
        android:background="@drawable/btn_yellow_bg_selector_5dp"
        android:textColor="@color/title_black_color"
        android:textSize="16sp"
        android:enabled="false"
        />
  </LinearLayout>
</LinearLayout>