<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_mask"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white_color"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >
          <TextView
              android:id="@+id/tvOne"
              android:layout_width="match_parent"
              android:layout_height="49dp"
              android:text="@string/complaint_cause_1"
              android:gravity="center"
              android:textColor="#4d4d4d"
              android:textSize="13sp"
              />
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/line_color"
              />
          <TextView
              android:id="@+id/tvTwo"
              android:layout_width="match_parent"
              android:layout_height="49dp"
              android:text="@string/complaint_cause_2"
              android:gravity="center"
              android:textColor="#4d4d4d"
              android:textSize="13sp"
              />
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/line_color"
              />
          <TextView
              android:id="@+id/tvThree"
              android:layout_width="match_parent"
              android:layout_height="49dp"
              android:text="@string/complaint_cause_3"
              android:gravity="center"
              android:textColor="#4d4d4d"
              android:textSize="13sp"
              />
        </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="10dp"
          />
      <TextView
          android:id="@+id/tvCancel"
          android:layout_width="match_parent"
          android:layout_height="49dp"
          android:text="@string/cancel"
          android:gravity="center"
          android:textColor="#4d4d4d"
          android:textSize="13sp"
          android:background="@color/bg_white_color"
          />
    </LinearLayout>
</FrameLayout>