<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="200dp"
    android:orientation="vertical"
    >
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_unbind_weixin"
        android:textSize="18sp"
        android:textColor="@color/title_black_color"
        android:layout_gravity="center"
        />
  </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/btnCancel"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@color/bg_white_color"
          android:text="@string/cancel"
          android:textColor="@color/title_black_color"
          />
      <Button
          android:id="@+id/btnSure"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@color/theme_color"
          android:text="@string/sure"
          android:textColor="@color/title_black_color"
          />
    </LinearLayout>
</LinearLayout>