<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white_color"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="50dp"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name"
            android:textSize="13sp"
            android:textColor="@color/title_black_color"
            android:layout_centerVertical="true"
            />
        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:minWidth="100dp"
            android:hint="@string/input"
            android:textColorHint="@color/text_3_b3_color"
            android:textSize="12sp"
            android:textColor="@color/text_3_4d_color"
            />
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/line_color"/>
      <RelativeLayout
          android:id="@+id/layoutAddress"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="13sp"
            android:textColor="@color/title_black_color"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:hint="@string/select"
            android:textColorHint="@color/text_3_b3_color"
            android:textSize="12sp"
            android:textColor="@color/text_3_4d_color"
            android:drawableRight="@drawable/ic_right_arrow"
            android:drawablePadding="5dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/line_color"/>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="50dp"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textSize="13sp"
            android:textColor="@color/title_black_color"
            android:layout_centerVertical="true"
            />
        <EditText
            android:id="@+id/etCard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:minWidth="100dp"
            android:hint="@string/input"
            android:textColorHint="@color/text_3_b3_color"
            android:textSize="12sp"
            android:textColor="@color/text_3_4d_color"
            />
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/line_color"/>
    </LinearLayout>
  <Button
      android:id="@+id/btnNext"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:background="@drawable/btn_yellow_bg_selector_5dp"
      android:enabled="false"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="30dp"
      android:text="@string/next_step"
      />
</LinearLayout>