<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="285dp"
    android:background="@drawable/bg_white_layer"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/fail_cause"
        android:textColor="@color/title_black_color"
        android:textSize="13sp"
        />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/line_color"
      />
  <android.support.v7.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

  </android.support.v7.widget.RecyclerView>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/line_color"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal"
      android:layout_gravity="bottom"
      >
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:background="@color/bg_3_e6_color"
        android:textColor="@color/title_black_color"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/btnCommit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/commit"
        android:background="@color/theme_color"
        android:textColor="@color/title_black_color"
        android:textSize="16sp"
        />
  </LinearLayout>
</LinearLayout>