<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_mask"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white_color"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                >
                <TextView
                    android:id="@+id/tvSina"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sina_weibo"
                    android:textSize="11sp"
                    android:textColor="@color/title_black_color"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_sina_weibo"
                    />
              <TextView
                  android:id="@+id/tvFriendCircle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/friend_circle"
                  android:textSize="11sp"
                  android:textColor="@color/title_black_color"
                  android:gravity="center"
                  android:drawableTop="@drawable/ic_friend_circle"
                  android:drawablePadding="5dp"
                  />
              <TextView
                  android:id="@+id/tvWeixin"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/weixin"
                  android:textSize="11sp"
                  android:textColor="@color/title_black_color"
                  android:gravity="center"
                  android:drawableTop="@drawable/ic_weixin"
                  android:drawablePadding="5dp"
                  />
              <TextView
                  android:id="@+id/tvQQ"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="QQ"
                  android:textSize="11sp"
                  android:textColor="@color/title_black_color"
                  android:gravity="center"
                  android:drawableTop="@drawable/ic_qq"
                  android:drawablePadding="5dp"
                  />
              <TextView
                  android:id="@+id/tvQQSpace"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/qq_space"
                  android:textSize="11sp"
                  android:textColor="@color/title_black_color"
                  android:gravity="center"
                  android:drawableTop="@drawable/ic_qzone"
                  android:drawablePadding="5dp"
                  />
            </LinearLayout>
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/line_color"
              />
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingTop="15dp"
              android:paddingBottom="15dp"
              >
            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copy_url"
                android:textSize="11sp"
                android:textColor="@color/title_black_color"
                android:gravity="center"
                android:drawableTop="@drawable/ic_copy_url"
                android:drawablePadding="5dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                />
          </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="@color/bg_white_color"
            android:textColor="@color/title_black_color"
            android:textSize="16sp"
            />
    </LinearLayout>
</FrameLayout>