<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white_color"
    tools:context="com.ysjr.mmjf.module.login_module.login.LoginActivity"
    >
  <LinearLayout
      android:orientation="vertical"
      android:background="@drawable/bg_white_layer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      >
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/textPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/set_psw"
        android:minHeight="@dimen/min_edit_height"
        app:met_baseColor="@color/btn_enabled_color"
        app:met_primaryColor="@color/line_color"
        app:met_textColorHint="@color/hint_color"
        app:met_clearButton="true"
        app:met_underlineColor="@color/line_color"
        app:met_errorColor="@color/error_color"
        android:inputType="textPassword"
        android:maxLength="16"
        />
      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/textConfirmPsw"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/confirm_psw"
          android:minHeight="@dimen/min_edit_height"
          app:met_baseColor="@color/btn_enabled_color"
          app:met_primaryColor="@color/line_color"
          app:met_textColorHint="@color/hint_color"
          app:met_clearButton="true"
          app:met_underlineColor="@color/line_color"
          app:met_errorColor="@color/error_color"
          app:met_hideUnderline="true"
          android:inputType="textPassword"
          android:maxLength="16"
          />
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_yellow_bg_selector"
        android:text="@string/confirm"
        android:textColor="@color/btn_yellow_textcolor_selector"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/min_edit_height"
        android:enabled="false"
        />
  </LinearLayout>
</LinearLayout>
